// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserList presentation should render UserList component when a user selected 1`] = `
<div>
  <Collapse
    expanded={false}
  >
    <h2>
      Please select a user
    </h2>
  </Collapse>
  <div
    className="row"
  >
    <div
      className="col-md-6"
    >
      <div
        className="d-flex flex-row justify-content-between my-flex-container"
      >
        <button
          className="btn btn-outline-primary"
          disabled={true}
          key="Apple"
          onClick={[Function]}
          type="button"
          value="Apple"
        >
          Apple
        </button>
        <button
          className="btn btn-outline-primary"
          disabled={true}
          key="Ford"
          onClick={[Function]}
          type="button"
          value="Ford"
        >
          Ford
        </button>
        <button
          className="btn btn-outline-primary"
          disabled={true}
          key="Nike"
          onClick={[Function]}
          type="button"
          value="Nike"
        >
          Nike
        </button>
        <button
          className="btn btn-outline-primary"
          disabled={true}
          key="Unilever"
          onClick={[Function]}
          type="button"
          value="Unilever"
        >
          Unilever
        </button>
        <button
          className="btn btn-outline-primary"
          disabled={true}
          key="Default"
          onClick={[Function]}
          type="button"
          value="Default"
        >
          Default
        </button>
        <button
          className="btn btn-outline-danger"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
  </div>
  <br />
  <div>
    <div
      className="row"
    >
      <div
        className="col-md-12"
      >
        <h2>
          Welcome 
          Apple
          , please pick your Ad from our wonderful selection...
        </h2>
      </div>
    </div>
    <PriceRuleList
      products={
        Array [
          Object {
            "id": "classic",
            "name": "Classic Ad",
            "price": 269.99,
          },
          Object {
            "id": "standout",
            "name": "Standout Ad",
            "price": 322.99,
          },
          Object {
            "id": "premium",
            "name": "Premium Ad",
            "price": 394.99,
          },
        ]
      }
      rules={
        Array [
          Object {
            "attributes": Array [
              Object {
                "name": "newPrice",
                "value": 299.99,
              },
            ],
            "productId": "standout",
            "ruleName": "newUnitPrice",
          },
        ]
      }
    />
  </div>
  <br />
</div>
`;

exports[`UserList presentation should render UserList component when no user selected 1`] = `
<div>
  <Collapse
    expanded={true}
  >
    <h2>
      Please select a user
    </h2>
  </Collapse>
  <div
    className="row"
  >
    <div
      className="col-md-6"
    >
      <div
        className="d-flex flex-row justify-content-between my-flex-container"
      >
        <button
          className="btn btn-outline-primary"
          disabled={false}
          key="Apple"
          onClick={[Function]}
          type="button"
          value="Apple"
        >
          Apple
        </button>
        <button
          className="btn btn-outline-primary"
          disabled={false}
          key="Ford"
          onClick={[Function]}
          type="button"
          value="Ford"
        >
          Ford
        </button>
        <button
          className="btn btn-outline-primary"
          disabled={false}
          key="Nike"
          onClick={[Function]}
          type="button"
          value="Nike"
        >
          Nike
        </button>
        <button
          className="btn btn-outline-primary"
          disabled={false}
          key="Unilever"
          onClick={[Function]}
          type="button"
          value="Unilever"
        >
          Unilever
        </button>
        <button
          className="btn btn-outline-primary"
          disabled={false}
          key="Default"
          onClick={[Function]}
          type="button"
          value="Default"
        >
          Default
        </button>
        <button
          className="btn btn-outline-danger"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
  </div>
  <br />
  <br />
</div>
`;
